k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: protego-hw
  labels:
    name: protego-hw
