k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: protego-hw
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 8000
  type: ClusterIP
